# Django_trainig002

./: README.md  mypy.ini  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_article_count.py  0004_auto_20221129_0250.py
blog/templates/blog/: article.html  blogs.html
blog/templates/blog/snippets/: comment.html  like_count.html  tag.html
config/: settings.py  urls.py
mysite/: admin.py  forms.py  models.py  urls.py  views.py
mysite/migrations/: 0001_initial.py  0002_profile.py
mysite/templates/mysite/: auth.html  base.html  base_auth.html  index.html  login.html  my_page.html
mysite/templates/mysite/snipets/: footer.html  head.html  header.html  pagination.html
mysite/templates/mysite/snippets/: header.html  messages.html
