[tool.poetry]
name = "django-training002"
version = "0.1.0"
description = ""
authors = ["yugo uchiida <y.uchiida@nirneege.com>"]
readme = "README.md"
packages = [{include = "django_training002"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
