[tool.poetry]
name = "django-training002"
version = "0.1.0"
description = ""
authors = ["yugo uchiida <y.uchiida@nirneege.com>"]
readme = "README.md"
packages = [{include = "django_training002"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2"

[tool.black]
target-version = ['py311']
line-length = 120

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"
flake8 = "^5.0.4"
django-stubs = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
